--- a/2-module/2-task/index.html
+++ b/2-module/2-task/index.html
@@ -7,10 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/assets/styles/index.css">
   <title>2-module-2-task</title>
+  <style>
+    [v-cloak]{
+      display: none;
+    }
+  </style>
 </head>
 <body>
 
-<div id="app">
+<div id="app" v-cloak>
   <meetup-page></meetup-page>
 </div>
 
